k8s/overlays/dev/patch-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  template:
    spec:
      containers:
      - name: app
